package com.pattern.behavioral.observer;

public interface Observer {
    void update(double temperature, double humidity, double pressure);
}
